pkg/plugins/policies/meshloadbalancingstrategy/plugin/v1alpha1/testdata/route.listeners.golden.yaml
resources:
- name: kri_msvc_default_zone-1_ns-1_ms-1_
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 127.0.0.1
        portValue: 27777
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          normalizePath: true
          routeConfig:
            name: kri_msvc_default_zone-1_ns-1_ms-1_
            requestHeadersToAdd:
            - header:
                key: x-kuma-tags
                value: '&kuma.io/service=backend&'
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: kri_msvc_default_zone-1_ns-1_ms-1_
              routes:
              - match:
                  path: /route-1
                name: kri_mhttpr_default_zone-1_ns-1_route-1_
                route:
                  cluster: default_ms-1_ns-1_zone-1_msvc_27777
                  hashPolicy:
                  - header:
                      headerName: x-per-meshservice-header
                  timeout: 0s
              - match:
                  prefix: /route-1/
                name: kri_mhttpr_default_zone-1_ns-1_route-1_
                route:
                  cluster: default_ms-1_ns-1_zone-1_msvc_27777
                  hashPolicy:
                  - header:
                      headerName: x-per-meshservice-header
                  timeout: 0s
              - match:
                  path: /route-2
                name: kri_mhttpr_default_zone-1_ns-1_route-2_
                route:
                  cluster: default_ms-1_ns-1_zone-1_msvc_27777
                  hashPolicy:
                  - header:
                      headerName: x-per-meshservice-header
                  timeout: 0s
              - match:
                  prefix: /route-2/
                name: kri_mhttpr_default_zone-1_ns-1_route-2_
                route:
                  cluster: default_ms-1_ns-1_zone-1_msvc_27777
                  hashPolicy:
                  - header:
                      headerName: x-per-meshservice-header
                  timeout: 0s
              - match:
                  path: /route-3
                name: kri_mhttpr_default_zone-1_ns-1_route-3_
                route:
                  cluster: default_ms-1_ns-1_zone-1_msvc_27777
                  hashPolicy:
                  - header:
                      headerName: x-per-meshhttproute-route-3
                  timeout: 0s
              - match:
                  prefix: /route-3/
                name: kri_mhttpr_default_zone-1_ns-1_route-3_
                route:
                  cluster: default_ms-1_ns-1_zone-1_msvc_27777
                  hashPolicy:
                  - header:
                      headerName: x-per-meshhttproute-route-3
                  timeout: 0s
          statPrefix: kri_msvc_default_zone-1_ns-1_ms-1_
    metadata:
      filterMetadata:
        io.kuma.tags: {}
    name: kri_msvc_default_zone-1_ns-1_ms-1_
    statPrefix: kri_msvc_default_zone-1_ns-1_ms-1_
    trafficDirection: OUTBOUND
